--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  file_picker: ^4.3.2
+  provider: ^6.0.2
+  dart_vlc: ^0.1.8
+  dart_vlc_ffi: ^0.1.3
 
 
   # The following adds the Cupertino Icons font to your application.
