--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   provider: ^6.0.2
   dart_vlc: ^0.1.8
   dart_vlc_ffi: ^0.1.3
+  dotted_border:
+  flutter_file_manager:
 
 
   # The following adds the Cupertino Icons font to your application.
