--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   dart_vlc_ffi: ^0.1.3
   dotted_border:
   flutter_file_manager:
+  screenshot: ^1.2.3
 
 
   # The following adds the Cupertino Icons font to your application.
